--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,212 @@
   font-size: 16px;
   line-height: 20px;
 }
+
 .noto-serif {
   font-family: "Noto Serif", "Times New Roman", serif;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  position: relative;
+  box-sizing: border-box;
+  background-image: url("../images/background_header.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav__logo {
+  position: relative;
+  top: 30px;
+  left: 30px;
+  width: 105px;
+  height: 39px;
+}
+
+.nav__links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style-type: none;
+  column-gap: 20px;
+  position: relative;
+  right: 80px;
+  top: 30px;
+}
+
+.nav__link {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  text-decoration: none;
+}
+
+.header__content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.header__content_title {
+  display: flex;
+  flex-direction: column;
+}
+
+.header__title {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 58px;
+  line-height: 72px;
+  letter-spacing: -1px;
+  max-width: 709px;
+  margin-top: 183px;
+  margin-bottom: 28px;
+  text-align: left;
+  position: relative;
+  left: 80px;
+}
+
+.span-accent {
+  display: block;
+  font-family: "Noto Serif";
+  font-style: italic;
+  font-weight: normal;
+  font-size: 58px;
+  line-height: 72px;
+  color: #2f80ed;
+}
+
+.header__description {
+  font-family: "Noto Serif";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  max-width: 683px;
+  position: relative;
+  left: 80px;
+}
+
+.header__image {
+  position: absolute;
+  top: 124px;
+  right: 5px;
+  max-width: 646px;
+  max-height: 568px;
+}
+
+.header__footer {
+  margin-top: auto;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  box-sizing: border-box;
+  flex-direction: column;
+  position: relative;
+  left: 80px;
+  bottom: 40px;
+}
+
+.header__footer-paragraph {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #838383;
+  height: 0;
+}
+
+.header__footer-right {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+}
+
+.content {
+  background-color: #0a2850;
+  background-image: url("../images/background_recipes.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.recipes {
+  justify-content: center;
+  display: flex;
+  padding-bottom: 100px;
+  padding-top: 80px;
+}
+
+.recipes__title {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  max-width: 580px;
+  margin-left: 80px;
+  padding-top: 100px;
+  color: #fff;
+}
+
+.recipes__subtitle {
+  font-family: "Noto Serif";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  max-width: 438px;
+  margin-left: 80px;
+  margin-top: 24px;
+  color: #fff;
+}
+
+.recipes__video {
+  display: flex;
+  flex-direction: column;
+  margin-left: 40px;
+}
+
+.recipes__video-item {
+  width: 480px;
+  height: 273px;
+  border: none;
+}
+
+.recipes__video-caption-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: 5px;
+}
+
+.recipes__video-caption-1 {
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color: #fff;
+}
+
+.recipes__video-caption-2 {
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color: #fff;
 }
