--- a/pages/index.css
+++ b/pages/index.css
@@ -126,7 +126,7 @@
   bottom: 40px;
 }
 
-.header__footer-paragraph {
+.header__paragraph {
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
@@ -136,7 +136,7 @@
   height: 0;
 }
 
-.header__footer-right {
+.header__right {
   display: flex;
   justify-content: space-between;
   width: 90%;
@@ -153,8 +153,8 @@
 .recipes {
   justify-content: center;
   display: flex;
-  padding-bottom: 100px;
-  padding-top: 80px;
+  flex-direction: column;
+  padding: 100px 0 215px 80px;
 }
 
 .recipes__title {
@@ -164,8 +164,7 @@
   font-size: 44px;
   line-height: 52px;
   max-width: 580px;
-  margin-left: 80px;
-  padding-top: 100px;
+  margin-bottom: 0;
   color: #fff;
 }
 
@@ -176,15 +175,21 @@
   font-size: 20px;
   line-height: 30px;
   max-width: 438px;
-  margin-left: 80px;
   margin-top: 24px;
+  margin-bottom: 0;
   color: #fff;
+}
+
+.recipes__videos-content {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 80px;
 }
 
 .recipes__videos {
   display: flex;
   flex-direction: column;
-  margin-left: 40px;
 }
 
 .recipes__video-item {
@@ -196,22 +201,14 @@
 .recipes__video-caption-container {
   display: flex;
   justify-content: space-between;
-  gap: 10px;
-  margin-top: 5px;
+  margin-top: 24px;
 }
 
-.recipes__video-caption-1 {
+.recipes__video-caption {
   font-family: "Inter";
   font-style: normal;
   font-size: 20px;
   line-height: 30px;
   color: #fff;
-}
-
-.recipes__video-caption-2 {
-  font-family: "Inter";
-  font-style: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff;
+  margin: 0;
 }
