--- a/pages/index.css
+++ b/pages/index.css
@@ -212,3 +212,122 @@
   color: #fff;
   margin: 0;
 }
+
+.reservation {
+  padding: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  background-image: url("../images/background_reservation.svg");
+  background-color: #d9e7ff;
+}
+
+.reservation__container {
+  width: 100%;
+  max-width: 600px;
+  background: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+}
+
+.reservation__title {
+  margin-bottom: 80px;
+  text-align: center;
+  color: #000;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.reservation__form-fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.reservation__label {
+  display: block;
+  margin-bottom: 8px;
+  color: #000;
+  width: auto;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.reservation__item {
+  width: 100%;
+  max-width: 385px;
+  padding: 15px 20px;
+  border: 1px solid #838383;
+  border-radius: 4px;
+  margin-bottom: 32px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.reservation__item:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+.reservation__item::placeholder {
+  text-indent: 10px;
+}
+
+.reservation__button {
+  width: 100%;
+  height: 60px;
+  padding: 12px;
+  background-color: #2f80ed;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 32px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.reservation__button:hover {
+  background-color: #0056b3;
+}
+
+.reservation__label_direction_right {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  justify-content: center;
+  margin-top: 32px;
+  margin-bottom: 120px;
+}
+
+.reservation__item_el_extra-options {
+  width: 20px;
+  height: 20px;
+}
+
+.reservation__label-text {
+  color: #000;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
