--- a/pages/index.css
+++ b/pages/index.css
@@ -233,6 +233,7 @@
 }
 
 .reservation__title {
+  margin-top: 100px;
   margin-bottom: 80px;
   text-align: center;
   color: #000;
@@ -309,7 +310,7 @@
   background-color: #0056b3;
 }
 
-.reservation__label_direction_right {
+.reservation__label_input {
   display: flex;
   align-items: center;
   gap: 12px;
@@ -318,7 +319,7 @@
   margin-bottom: 120px;
 }
 
-.reservation__item_el_extra-options {
+.reservation__item_options {
   width: 20px;
   height: 20px;
 }
