--- a/pages/index.css
+++ b/pages/index.css
@@ -233,8 +233,9 @@
 }
 
 .reservation__title {
-  margin-top: 100px;
-  margin-bottom: 80px;
+  margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   color: #000;
   font-family: Inter;
