--- a/pages/index.css
+++ b/pages/index.css
@@ -223,19 +223,9 @@
   background-color: #d9e7ff;
 }
 
-.reservation__container {
-  width: 100%;
-  max-width: 600px;
-  background: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 2rem;
-}
-
 .reservation__title {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 100px;
+  margin-bottom: 80px;
   text-align: center;
   color: #000;
   font-family: Inter;
@@ -249,7 +239,7 @@
   border: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: 32px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -313,7 +303,6 @@
 
 .reservation__label_input {
   display: flex;
-  align-items: center;
   gap: 12px;
   justify-content: center;
   margin-top: 32px;
