--- a/pages/index.css
+++ b/pages/index.css
@@ -221,11 +221,12 @@
   background-color: #fff;
   background-image: url("../images/background_reservation.svg");
   background-color: #d9e7ff;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .reservation__title {
-  margin-top: 100px;
-  margin-bottom: 80px;
+  margin: 100px 0 80px 0;
   text-align: center;
   color: #000;
   font-family: Inter;
@@ -298,7 +299,7 @@
 }
 
 .reservation__button:hover {
-  background-color: #0056b3;
+  opacity: 70%;
 }
 
 .reservation__label_input {
@@ -307,6 +308,7 @@
   justify-content: center;
   margin-top: 32px;
   margin-bottom: 120px;
+  border-radius: 2px;
 }
 
 .reservation__item_options {
