--- a/pages/index.css
+++ b/pages/index.css
@@ -1,336 +1,11 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
+/* index.css */
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/footer.css");
+@import url("../blocks/form.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
 
-.noto-serif {
-  font-family: "Noto Serif", "Times New Roman", serif;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  position: relative;
-  box-sizing: border-box;
-  background-image: url("../images/background_header.svg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  position: relative;
-  top: 30px;
-  left: 30px;
-  width: 105px;
-  height: 39px;
-}
-
-.nav__links {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  list-style-type: none;
-  column-gap: 20px;
-  position: relative;
-  right: 80px;
-  top: 30px;
-}
-
-.nav__link {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000000;
-  text-decoration: none;
-}
-
-.header__content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.header__content_title {
-  display: flex;
-  flex-direction: column;
-}
-
-.header__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 58px;
-  line-height: 72px;
-  letter-spacing: -1px;
-  max-width: 709px;
-  margin-top: 183px;
-  margin-bottom: 28px;
-  text-align: left;
-  position: relative;
-  left: 80px;
-}
-
-.span-accent {
-  display: block;
-  font-family: "Noto Serif";
-  font-style: italic;
-  font-weight: normal;
-  font-size: 58px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__description {
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 683px;
-  position: relative;
-  left: 80px;
-}
-
-.header__image {
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  max-width: 646px;
-  max-height: 568px;
-}
-
-.header__footer {
-  margin-top: auto;
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-  box-sizing: border-box;
-  flex-direction: column;
-  position: relative;
-  left: 80px;
-  bottom: 40px;
-}
-
-.header__paragraph {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  height: 0;
-}
-
-.header__right {
-  display: flex;
-  justify-content: space-between;
-  width: 90%;
-}
-
-.content {
-  background-color: #0a2850;
-  background-image: url("../images/background_recipes.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.recipes {
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  padding: 100px 0 215px 80px;
-}
-
-.recipes__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  max-width: 580px;
-  margin-bottom: 0;
-  color: #fff;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 438px;
-  margin-top: 24px;
-  margin-bottom: 0;
-  color: #fff;
-}
-
-.recipes__videos-content {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 80px;
-}
-
-.recipes__videos {
-  display: flex;
-  flex-direction: column;
-}
-
-.recipes__video-item {
-  width: 480px;
-  height: 273px;
-  border: none;
-}
-
-.recipes__video-caption-container {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 24px;
-}
-
-.recipes__video-caption {
-  font-family: "Inter";
-  font-style: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff;
-  margin: 0;
-}
-
-.reservation {
-  padding-top: 100px;
-  padding-bottom: 120px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-  background-image: url("../images/background_reservation.svg");
-  background-color: #d9e7ff;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.reservation__title {
-  margin: 0 auto 80px;
-  text-align: center;
-  color: #000;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 385px;
-}
-
-.form__form-fieldset {
-  border: none;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 32px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.form__label {
-  display: block;
-  margin-bottom: 8px;
-  color: #000;
-  width: auto;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__item {
-  width: 100%;
-  max-width: 385px;
-  padding: 15px 20px;
-  border: 1px solid #838383;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-bottom: 32px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.form__item:focus {
-  border-color: #007bff;
-  outline: none;
-}
-
-.form__item::placeholder {
-  text-indent: 10px;
-}
-
-.form__button {
-  width: 100%;
-  height: 60px;
-  padding: 12px;
-  background-color: #2f80ed;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-bottom: 32px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__button:hover {
-  opacity: 70%;
-}
-
-.form__label_input {
-  display: flex;
-  gap: 12px;
-  justify-content: center;
-  margin-top: 32px;
-  margin-bottom: 120px;
-  border-radius: 2px;
-}
-
-.form__item_options {
-  width: 20px;
-  height: 20px;
-}
-
-.form__label-text {
-  color: #000;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
+/* o resto de seus estilos CSS */
