--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -16,7 +16,7 @@
   margin: 0 auto 80px;
   text-align: center;
   color: #000;
-  font-family: Inter;
+  font-family: "Inter";
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
