--- a/blocks/header.css
+++ b/blocks/header.css
@@ -37,7 +37,7 @@
   left: 80px;
 }
 
-.span-accent {
+.header__span-accent {
   display: block;
   font-family: "Noto Serif";
   font-style: italic;
