--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -28,6 +28,10 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  color: #2f80ed;
+  color: #000;
   text-decoration: none;
+}
+
+.nav__link:hover {
+  color: #2f80ed;
 }
